@@ -87,3 +87,4 @@
   - unused-non-trivial-variable got user-blacklist and user-whitelist support
   - container-inside-loop is now a manual check instead of level2
   - HiddenLevel was renamed to ManualLevel
+  - connect-3arg-lambda now warns when passing a lambda to QTimer::singleShot() without a context
